--- a/src/components/main.module.css
+++ b/src/components/main.module.css
@@ -1,6 +1,13 @@
+body {
+  background-image: linear-gradient(
+    to right,
+    rgb(51, 51, 184),
+    rgb(163, 164, 201)
+  );
+}
 #main {
   box-shadow: 0 0 20px 0 rgba(72, 94, 116, 0.7);
-  color: black;
+  color: #19202c;
   margin-top: 2em;
   border-radius: 10px;
   background: white;
@@ -11,6 +18,25 @@
   border-bottom-left-radius: 10px;
   background: white !important;
 }
+
+#left ul li {
+  margin-top: 30px;
+  list-style: none;
+  color: #04020a;
+  font-size: 20px;
+  /* opacity: 0.6; */
+}
+#left ul {
+  margin-top: 70px;
+}
+#left ul li {
+  margin-top: 12px;
+}
+#left ul li span {
+  position: absolute;
+  margin-left: 25px;
+  margin-top: -1px;
+}
 #right {
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
@@ -18,7 +44,7 @@
 }
 
 #img {
-  height: 600px;
+  height: 400px;
   width: 450px;
   margin-top: 35px;
   margin-left: 10px;
@@ -68,11 +94,14 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  padding: 5px;
+  padding: 3px;
+  font-size: 30px;
+  color: #e8e8e8;
+  opacity: 0.6;
 }
 #icons:hover {
-  width: 45px;
-  height: 45px;
+  opacity: 0.8;
+  color: #2434e6;
 }
 .form {
   margin-left: 80px;
